--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Тестовое приложение для Битрикс24</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        .container { max-width: 800px; margin: auto; }
+        .info { background: #f0f8ff; padding: 15px; border-radius: 5px; margin: 20px 0; }
+        button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>🧪 Тестовое приложение в Битрикс24</h1>
+        <p>Этот интерфейс будет загружен внутри вашего портала как локальное приложение.</p>
 
+        <div class="info">
+            <h3>Цель этого теста:</h3>
+            <ol>
+                <li>Проверить, что приложение корректно регистрируется в Битрикс24.</li>
+                <li>Проверить, что OAuth-авторизация проходит успешно (откроется отдельная вкладка).</li>
+                <li>Увидеть здесь в консоли (F12) данные, переданные Битрикс24 (логин пользователя, домен).</li>
+            </ol>
+            <p>Интеграция с AI (Chutes) и бизнес-логика будут добавлены после успеха этого этапа.</p>
+        </div>
+
+        <button id="testBtn">Запросить данные пользователя</button>
+        <div id="result"></div>
+    </div>
+
+    <!-- Подключаем официальную библиотеку для работы внутри iframe Битрикс24 -->
+    <script src="//api.bitrix24.com/api/v1/"></script>
+    <script src="bitrix24.js"></script>
+</body>
+</html>
